Revert "Revert "Add automatic module names for all Dropwizard modules" (#5137)"
This reverts commit 4c64f82b340fff1c670982415807e207e88fc4aa.

--- a/dropwizard-parent/pom.xml
+++ b/dropwizard-parent/pom.xml
@@ -18,6 +18,7 @@
     </description>
 
     <properties>
+        <module.name>io.dropwizard.parent</module.name>
         <maven.compiler.release>11</maven.compiler.release>
         <maven.compiler.showWarnings>true</maven.compiler.showWarnings>
         <maven.compiler.showDeprecation>true</maven.compiler.showDeprecation>
@@ -229,6 +230,9 @@
                         <manifest>
                             <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                         </manifest>
+                        <manifestEntries>
+                            <Automatic-Module-Name>${module.name}</Automatic-Module-Name>
+                        </manifestEntries>
                     </archive>
                 </configuration>
             </plugin>
