Use Java 8 for JavaDoc generation to fix an issue regarding Automatic-Module-Names

--- a/dropwizard-parent/pom.xml
+++ b/dropwizard-parent/pom.xml
@@ -59,6 +59,7 @@
                             <doclint>none</doclint>
                             <quiet>true</quiet>
                             <notimestamp>true</notimestamp>
+                            <javadocVersion>1.8</javadocVersion>
                         </configuration>
                         <executions>
                             <execution>
